Week_4/Oleksii Fedorenko/style.css
* {
	margin: 0;
	padding: 0;
}

/*Базовий шрифт*/
html {
	font-size: 16px;
}

body {
	box-sizing: border-box;
}

/*Базовий елемент бібліотеки, не підлягає зміні*/
h1 {
	font-family: "Rubik", sans-serif;
	font-style: normal;
	font-size: 2.81rem;
	font-weight: 600;
	line-height: 3.33rem;
	color: #FFD600;
}

/*Базовий елемент бібліотеки, не підлягає зміні*/
h2 {
	font-family: "Montserrat", sans-serif;
	font-style: normal;
	font-size: 2.18rem;
	font-weight: 300;
	line-height: 2.67rem;
	color: #FFD600;
}

/*Базовий елемент бібліотеки, не підлягає зміні*/
.ah-content_text {
	font-family: "Montserrat", sans-serif;
	font-style: normal;
	font-size: 1.25rem;
	font-weight: 300;
	line-height: 1.52rem;
	color: #FFFFFF;
}

.ah-container {
	max-width: 100%;
	min-height: auto;
	background-color: #2B2727;
}

.ah-row {
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-around;
}

/*Для розробника сайдбару*/
.ah-sidebar {
	display: flex;
	max-width: 100%;
	flex-direction: row;
	flex: 20%;
	border: 1px solid #FFD600; /*тільки для розробки*/
}

/*Для розробника сайдбару*/
.ah-sidebar h2 {
	color: #FFD600;
}

.ah-library-info {
	display: flex;
	flex: 80%;
	max-width: 100%;
	flex-direction: column;
	padding-left: 2.19rem;
	padding-bottom: 5.25rem;
	border: 1px solid #FFD600; /*тільки для розробки*/
}

.ah-library-info_title,
.ah-library-info_setup,
.ah-library-info_use {
	max-width: 76%;
}

.ah-library-info_title {
	margin-top: 5.25rem;
}

.ah-library-info h2 {
	margin: 1.87rem 0;
}

@media (max-width: 576px) {

	html {
		font-size: 12px;
	}

	.ah-row {
		display: flex;
		flex-flow: column nowrap;
		justify-content: center;
	}

	.ah-library-info {
		display: flex;
		flex-direction: column;
		padding: 0 1.1rem 5.25rem;
		max-width: 100%;
	}

	.ah-library-info_title,
	.ah-library-info_setup,
	.ah-library-info_use {
		max-width: 100%;
	}

}

